04 seems to work in html

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ book:
     - index.qmd
     - 01-intro.qmd
     - 02-inference.qmd
+    - 03-unsupervised.qmd
+    - 04-nlp.qmd
 
 bibliography: references.bib
 
